Oh boy, does it work

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,8 +11,9 @@
 
     <section>
       <div id="title">
-        <span class="credits left">Telegram-канал: <a href="https://t.me/loolzrules_channel">@loolzrules_channel</a></span>
-        <span class="credits right">{{ page.date }}</span>
+        <span class="credits left">Telegram-канал: <a href="https://t.me/loolzrules_channel" target="_blank">@loolzrules_channel</a></span>
+        <span class="credits right">{{ page.date | date: "%Y-%m-%d" }}</span>
+        <br>
         <hr>
       </div>
 
