--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,9 @@
   <title>На репите каждый день - {{ page.title }}</title>
   <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
+  <meta property="og:title" content="{{ page.title }}" />
+  <meta property="og:image" content="{{ page.image }}" />
 </head>
 <body>
   <div class="wrapper">
