--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,13 @@
 
 @import "{{ site.theme }}";
 
+@media (max-width: 700px) {
+  .yt {
+    max-width: 100%;
+    max-height: 51vw;
+  }
+}
+
 .badge-wrap {
   padding: 5px;
 }
