--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,10 +3,50 @@
 
 @import "{{ site.theme }}";
 
-@media (max-width: 700px) {
-  .yt {
-    max-width: 100%;
-    max-height: 51vw;
+#post {
+  margin: 0;
+  padding: 0;
+
+  & > #title {
+    margin: 0;
+    padding: 20px 0;
+
+    & > .credits {
+      margin: 0;
+    }
+  }
+}
+
+@media print, screen and (max-width: 720px) {
+  #post > #title > .credits {
+    line-height: 22px;
+  }
+}
+
+
+.yt {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+
+  & > iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: block;
+  }
+}
+
+.sc {
+  background: rgba(255, 255, 255, 0.125);
+  padding: 12px;
+
+  & > iframe {
+    display: block;
   }
 }
 
