--- a/_includes/track.html
+++ b/_includes/track.html
@@ -20,19 +20,19 @@
 <div class="badge-wrap">
   {% if include.spotify %}
   <a href="https://open.spotify.com/{{ include.spotify }}" target="_blank">
-    <img alt="Spotify" src="/assets/spotify.svg" class="badge">
+    <img alt="Spotify" src="/assets/images/spotify.svg" class="badge">
   </a>
   {% endif %}
 
   {% if include.yandex %}
   <a href="https://music.yandex.by/{{ include.yandex }}" target="_blank">
-    <img alt="Yandex Music" src="/assets/yandex_music.svg" class="badge">
+    <img alt="Yandex Music" src="/assets/images/yandex_music.svg" class="badge">
   </a>
   {% endif %}
 
   {% if include.apple %}
   <a href="https://music.apple.com/{{ include.apple }}" target="_blank">
-    <img alt="Apple Music" src="/assets/apple_music.svg" class="badge">
+    <img alt="Apple Music" src="/assets/images/apple_music.svg" class="badge">
   </a>
   {% endif %}
 </div>
