--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -45,7 +45,9 @@ layout: compress
         <img src="/assets/images/posts/{{ page.image }}.jpg" alt="{{ page.title }}" class="cover">
       {%- endif -%}
 
-      <p class="date">{{ page.date | date: "%Y.%m.%d" }}</p>
+      {%- if page.date != site.time -%}
+        <p id="post_date">{{ page.date | date: "%Y.%m.%d" }}</p>
+      {%- endif -%}
 
       {{ content }}
     </section>
