--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,6 +7,12 @@
   margin: 0;
   padding: 0;
 
+  #post_date {
+    color: #696969;
+    font-size: 11px;
+    font-weight: bold;
+  }
+
   & strong {
     font-weight: bold;
   }
