--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,10 @@
 
 @import "{{ site.theme }}";
 
+body {
+  padding: 0;
+}
+
 #post {
   margin: 0;
   padding: 0;
@@ -20,50 +24,61 @@
   & > #title {
     margin: 0;
     padding: 20px 0;
-
     & > .credits {
       margin: 0;
+      @media print, screen and (max-width: 720px) {
+        line-height: 22px;
+      }
     }
   }
-}
 
-@media print, screen and (max-width: 720px) {
-  #post > #title > .credits {
-    line-height: 22px;
+  & > hr:last-of-type {
+    margin: 0;
   }
-}
 
+  & > #nav,
+  &> #title {
+    padding: 20px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
-.yt {
-  position: relative;
-  padding-bottom: 56.25%;
-  height: 0;
-  overflow: hidden;
-  max-width: 100%;
-
-  & > iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: block;
+    @media print, screen and (max-width: 720px) {
+      flex-direction: column;
+    }
   }
-}
 
-.sc {
-  background: rgba(255, 255, 255, 0.125);
-  padding: 12px;
+  .yt {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
 
-  & > iframe {
-    display: block;
+    & > iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: block;
+    }
   }
-}
 
-.badge-wrap {
-  padding: 5px;
-}
-.badge {
-  height: 40px;
-  margin: 5px;
+  .sc {
+    background: rgba(255, 255, 255, 0.125);
+    padding: 12px;
+
+    & > iframe {
+      display: block;
+    }
+  }
+
+  .badge-wrap {
+    padding: 5px;
+  }
+  .badge {
+    height: 40px;
+    margin: 5px;
+  }
 }
