--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ telegram: loolzrules_channel
 ---
 {%- assign performer_name = page.name | default: page.title -%}
 {%- assign title = "На репите каждый день - " | append: performer_name -%}
-{%- assign index_page_address = "/channel.html" -%}
+{%- assign index_page_address = "/channel/" -%}
 <!doctype html>
 <html lang="ru">
 <head>
