New post drafts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,7 @@ telegram: loolzrules_channel
 {%- assign title = "На репите каждый день - " | append: performer_name -%}
 {%- assign index_page_address = "/channel/" -%}
 <!doctype html>
+{{ page.name }}
 <html lang="ru">
 <head>
   <meta charset="utf-8">
