Reimplemented compress.html, improved page titles,set up better youtube embed options and added a new post draft.

--- a/_includes/track.html
+++ b/_includes/track.html
@@ -9,7 +9,7 @@
 {%- if include.song.youtube -%}
 <div class="yt">
   <iframe width="650" height="365"
-          src="https://www.youtube-nocookie.com/embed/{{ include.song.youtube }}?controls=2"
+          src="https://www.youtube-nocookie.com/embed/{{ include.song.youtube }}?rel=0&modestbranding=1&iv_load_policy=3"
           frameborder="0"
           allowfullscreen
   ></iframe>
