--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -51,7 +51,7 @@ telegram: loolzrules_channel
       <hr>
 
       {%- if page.image -%}
-        <img src="/assets/images/posts/{{ page.image }}.jpg" alt="{{ page.title }}" class="cover">
+        <img src="/assets/images/posts/{{ page.image }}.jpg" alt="{{ performer_name }}" class="cover">
       {%- endif -%}
 
       {%- unless page.url == index_page_address -%}
