A couple of new drafts and small edits

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -99,7 +99,7 @@ telegram: loolzrules_channel
       image.src = url;
     };
     const index = Math.floor({{ number_of_memes }} * Math.random());
-    console.log("Хочешь всё сломать? Боюсь, тут нечего ломать, уже всё сломано до тебя :D Лучше позалипай на мемас:");
+    console.log("Хочешь всё сломать? Боюсь, тут нечего ломать, всё уже сломано до тебя :D Лучше позалипай на мемас:");
     console.image(`{{site.url}}/assets/images/memes/${index}.jpg`);
   </script>
 </body>
