--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 ---
 layout: compress
 telegram: loolzrules_channel
+author_telegram: loolzrules
 ---
 {%- assign performer_name = page.name | default: page.title -%}
 {%- assign index_page_address = "/channel/" -%}
@@ -31,9 +32,8 @@ telegram: loolzrules_channel
 </head>
 <body>
   <div class="wrapper">
-    <section id="post">
-      <div id="navigation">
-        <span class="credits left" id="breadcrumbs">
+    <div id="navigation">
+        <span class="credits left center-text" id="breadcrumbs">
           {%- assign index_page_name = "Все посты" -%}
           {%- if page.url == index_page_address -%}
             {{- index_page_name -}}
@@ -41,15 +41,15 @@ telegram: loolzrules_channel
             <a href="{{ index_page_address | remove: '.html' }}">{{ index_page_name }}</a> / {{ performer_name }}
           {%- endif -%}
         </span>
-        <div class="spacer"></div>
-        <span class="credits right">
+      <div class="spacer"></div>
+      <span class="credits right center-text">
           {%- assign link_href = "https://t.me/" | append: layout.telegram -%}
           {%- assign link_text = "@" | append: layout.telegram -%}
           Telegram: {% include safe_link.html href=link_href text=link_text -%}
         </span>
-      </div>
-      <hr>
-
+    </div>
+    <hr>
+    <section id="post">
       {%- if page.image -%}
         <img src="/assets/images/posts/{{ page.image }}.jpg" alt="{{ performer_name }}" class="cover">
       {%- endif -%}
@@ -62,26 +62,41 @@ telegram: loolzrules_channel
 
       {%- for song in page.songs -%}
         {%- include track.html song=song -%}
-        <hr>
+        {%- unless forloop.last -%}
+          <hr>
+        {%- endunless-%}
       {%- endfor -%}
 
       {%- unless page.url == index_page_address -%}
         {%- assign share_url = site.url | append: page.url | url_encode -%}
         {%- assign share_text = "Больше на " | append: "@" | append: layout.telegram | url_encode -%}
         {%- assign share_link = "https://t.me/share/url?url=" | append: share_url | append: "&text=" | append: share_text -%}
-        <p>Понравилось? {% include safe_link.html href=share_link text="Поделись с друзьями" -%}, мне будет приятно :)</p>
+        <p class="center-text">Понравилось? {% include safe_link.html href=share_link text="Поделись с друзьями" -%}, мне будет приятно :)</p>
+      {%- endunless -%}
+    </section>
+    <div class="spacer"></div>
+    <footer>
+      {%- unless page.url == index_page_address -%}
         <hr>
         <div id="pagination">
           {%- if page.previous -%}
-            <a href="{{ page.previous.url }}">← {{ page.previous.name | default: page.previous.title }}</a>
+          <a href="{{ page.previous.url }}">← {{ page.previous.name | default: page.previous.title }}</a>
           {%- endif -%}
           <div class="spacer"></div>
           {%- if page.next -%}
-            <a href="{{ page.next.url }}">{{ page.next.name | default: page.next.title }} →</a>
+          <a href="{{ page.next.url }}">{{ page.next.name | default: page.next.title }} →</a>
           {%- endif -%}
         </div>
       {%- endunless -%}
-    </section>
+      <hr>
+      <div id="information">
+        {%- assign link_href = "https://t.me/" | append: layout.author_telegram -%}
+        {%- assign link_text = "@" | append: layout.author_telegram -%}
+        <span class="center-text">Автор канала: {% include safe_link.html href=link_href text=link_text -%}</span>
+        <div class="spacer"></div>
+        <span class="center-text">На сайте есть мемы, но не каждому дано их найти&nbsp;;)</span>
+      </div>
+    </footer>
   </div>
   {%- assign number_of_memes = site.static_files | where_exp: "file", "file.path contains 'memes'" | size -%}
   <script type="text/javascript">
