New draft and a small layout edit

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -94,6 +94,10 @@ body {
     overflow: hidden;
     max-width: 100%;
 
+    & + p {
+      margin-top: 20px;
+    }
+
     & > iframe {
       position: absolute;
       top: 0;
