--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,6 +18,7 @@ author_telegram: loolzrules
   <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Музыкальный блог">
+  <meta name="author" content="@loolzrules">
   <meta property="og:title" content="{{ title }}" />
   {%- if page.image -%}
     {%- assign image = "/assets/images/posts/" | append: page.image | append: ".jpg" -%}
