Goodenough for now

--- a/_layouts/games.html
+++ b/_layouts/games.html
@@ -7,8 +7,10 @@ layout: compress
   <meta charset="utf-8">
   <title>{{ title }}</title>
   <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+  <link rel="stylesheet" href="{{ '/assets/css/2048.css?v=' | append: site.github.build_revision | relative_url }}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="2048">
+  <meta name="author" content="@loolzrules">
   <meta property="og:title" content="2048" />
   <link rel="icon" href="/assets/images/favicon.png">
   <link rel="canonical" href="{{site.url}}{{page.url}}">
