--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -1,13 +1,10 @@
----
-layout: null
----
 <!doctype html>
 <html lang="ru">
 <head>
   <meta charset="utf-8">
   <title>{{ title }}</title>
   <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-  <link rel="stylesheet" href="{{ '/assets/css/2048.css?v=' | append: site.github.build_revision | relative_url }}">
+  <link rel="stylesheet" href="{{ '/assets/css/game.css?v=' | append: site.github.build_revision | relative_url }}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="2048">
   <meta name="author" content="@loolzrules">
